{
    "name": "Controls",
    "maps": [
        {
            "name": "Default",
            "id": "f6fe6e4c-e891-44c8-9a94-cce1db9eafdf",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "06808a02-eb88-43a7-aa9f-aaf7b5006e21",
                    "expectedControlType": "Stick",
                    "processors": "StickDeadzone(min=0.7)",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "DefaultAction",
                    "type": "Button",
                    "id": "b0ed70e0-7f96-4df6-807d-5ed680ced4a0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ToggleMenu",
                    "type": "Button",
                    "id": "a873bb80-f076-431b-a3aa-a75b879c3302",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "CancelAction",
                    "type": "Button",
                    "id": "2f7cd397-5271-4d8b-8b32-8b60b6bfa426",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ConfirmAction",
                    "type": "Button",
                    "id": "a46a15bd-d06f-4419-be25-481b4d8b6340",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "756e4fbd-758d-4cd2-af5a-7ae3b832bbf6",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f4005c1f-801b-43b0-806a-cbf1ec45050a",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "DefaultAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a183a230-84ff-44fe-a45b-2b1320472d80",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "DefaultAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6811859c-512c-443b-b155-12dd59f17cac",
                    "path": "<Touchscreen>/Press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DefaultAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1b795c3a-10fd-4206-9939-7fbcba7adc5d",
                    "path": "<Gamepad>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "ToggleMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b963ca8d-9ac4-40ab-ae17-e72e8f0fe658",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "42a5dd25-781b-4822-883e-dfca85d0e08d",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "CancelAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "af1bc19c-11bc-49ef-936e-14011f8bab86",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "ConfirmAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Mouse",
            "bindingGroup": "Mouse",
            "devices": [
                {
                    "devicePath": "<Mouse>",
                    "isOptional": true,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Gamepad",
            "bindingGroup": "Gamepad",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": true,
                    "isOR": false
                }
            ]
        },
        {
            "name": "TouchScreen",
            "bindingGroup": "TouchScreen",
            "devices": [
                {
                    "devicePath": "<Touchscreen>",
                    "isOptional": true,
                    "isOR": false
                }
            ]
        }
    ]
}